seccion 1 terminada, seccion 3 falta iconos

--- a/stylesheets/EBM/_ebm.scss
+++ b/stylesheets/EBM/_ebm.scss
@@ -73,7 +73,7 @@ $hr-style: solid;
   "times-range",
   "strip-units",
   "px-to-rems",
-  "prefixer",
+//  "prefixer",
   "media-queries",
   "ebm-loops",
   "ebm-loops-small",
