--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -39,7 +39,7 @@
 // Bourbon sass tools
 // http://bourbon.io/docs/
 
-@import "bourbon/bourbon";
+// @import "bourbon/bourbon";
 
 /*========================================
 =                EASY BOX MODEL         =
