--- a/stylesheets/app/_app.scss
+++ b/stylesheets/app/_app.scss
@@ -6,7 +6,7 @@
 @import 
   // TYPE
   "includes/fonts-custom",
-  "includes/type-custom",
+//  "includes/type-custom",
   "includes/icons",
   // LAYOUT
   "includes/layout-global",
@@ -22,5 +22,7 @@
   // "includes/nav-off-canvas",
 
 // APP Views
-// @import 
+ @import 
   // VIEW NAME
+    "views/home",
+    "views/empresas";
