--- a/stylesheets/app/views/seccion_2.scss
+++ b/stylesheets/app/views/seccion_2.scss
@@ -7,8 +7,8 @@
 		color: white;
 		.row {
 			h3.title_demuestra_tus_habilidades {
-				margin-top: 118px;
-				margin-bottom: -81px;
+				margin-top: 94px;
+				margin-bottom: -85px;
 				font-family: sans-serif;
 				font-size: 32px;
 			}
@@ -23,7 +23,14 @@
 				h2 {
 					font-size: 58px;
 				}
+				h4 {
+					font-size: 21px;
+				}
+				p{
+					font-size: 14px;
+				}
 			}	
+
 		}		
 	}
 }
@@ -36,7 +43,7 @@
 		background-size: cover;
 		.row  {
 			.col-sm-8{
-				.row{
+				.clearfix{
 					border-bottom: 2px dotted $gray;
 				}
 				h2 {
@@ -45,23 +52,37 @@
 				border: 1px solid black;
 				background-color:white;
 			}
-			.col-sm-8.hoja {
-				padding: 130px;
+			.hoja {
+				padding: 68px;
+				height: 927px;
+				@media #{$sm-down} {
+					padding: 14px;
+				}
 			}
 			p {
 				color: $gray;
+				font-size: 17px;
 			}
 			.button {
 				margin-top: -38px;
 			}
-		}
 			a#ingresar {
 					display: block;
 					background-color: white;
 					border: 2px solid;
 					width: 99px;
+					text-decoration: none;
 			
 			}
+			a#ingresar.bt {
+				color: gray;
+				font-size: 11px;
+				margin-left: 318px;
+			}
+			h6 {
+				font-size: 10px;
+			}		
+
 			h2.text-center {
 				margin-top: -57px;
 				margin-bottom: 22px;
@@ -69,15 +90,57 @@
 			h4 {
 				text-decoration: underline;
 				color: #2B8BBA;
+				font-size: 20px;
 			}
-			
+			h5 {
+				font-size: 20px;
+				color: $gray;
+			}
+
+		}
 	}
 }
-// 		.row {
-// 				background-color: white;
-// 				height: 900px;
-// 				width: 755px;
-// 				margin-top: 56px;
-// 				margin-left: 350px;
-// 				padding: 100px;
-// 				color: #A1A1A1;	
+
+#seccion_6{
+	.container-fluid{
+		background-color: #E0DDDD;
+		height: 440px;
+		background-size: cover;
+	}
+	h6{
+		font-size: 27px;
+	}
+	h5{
+		color: $gray;
+	}
+	button.btn.btn-default {
+		margin-left: 333px;
+		margin-top: 31px;
+		border-radius: 29px;
+		width: 87px;
+		color: white;
+		background-color: rgb(136, 135, 135);
+		font-size: 13px;
+		border: 1px solid white;
+	}
+}
+
+#footer {
+	.row{
+		background-color:white;
+		height: 5px;
+	}
+	.row-1 {
+		background-color: rgba(0, 0, 0, 0.3);
+		height: 36px;
+	}
+	img {
+		margin-top: -21px;
+	}
+	p.derechos {
+		margin-left: 452px;
+		color: white;
+		font-size: 14px;
+		margin-top: 7px;
+	}
+}
