--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5673,8 +5673,8 @@ body {
   background-size: cover;
   color: white; }
   #seccion_2 .container-fluid .row h3.title_demuestra_tus_habilidades {
-    margin-top: 118px;
-    margin-bottom: -81px;
+    margin-top: 94px;
+    margin-bottom: -85px;
     font-family: sans-serif;
     font-size: 32px; }
   #seccion_2 .container-fluid .row {
@@ -5686,6 +5686,10 @@ body {
       margin-top: 86px; }
       #seccion_2 .container-fluid .row .col-md-4.text-center h2 {
         font-size: 58px; }
+      #seccion_2 .container-fluid .row .col-md-4.text-center h4 {
+        font-size: 21px; }
+      #seccion_2 .container-fluid .row .col-md-4.text-center p {
+        font-size: 14px; }
 
 #seccion_5 .container-fluid {
   background-image: url(../assets/img/laptop.png);
@@ -5694,27 +5698,75 @@ body {
   #seccion_5 .container-fluid .row .col-sm-8 {
     border: 1px solid black;
     background-color: white; }
-    #seccion_5 .container-fluid .row .col-sm-8 .row {
+    #seccion_5 .container-fluid .row .col-sm-8 .clearfix {
       border-bottom: 2px dotted #898b8e; }
     #seccion_5 .container-fluid .row .col-sm-8 h2 {
       color: #898b8e; }
-  #seccion_5 .container-fluid .row .col-sm-8.hoja {
-    padding: 130px; }
+  #seccion_5 .container-fluid .row .hoja {
+    padding: 68px;
+    height: 927px; }
+    @media only screen and (max-width: 768px) {
+      #seccion_5 .container-fluid .row .hoja {
+        padding: 14px; } }
   #seccion_5 .container-fluid .row p {
-    color: #898b8e; }
+    color: #898b8e;
+    font-size: 17px; }
   #seccion_5 .container-fluid .row .button {
     margin-top: -38px; }
-  #seccion_5 .container-fluid a#ingresar {
+  #seccion_5 .container-fluid .row a#ingresar {
     display: block;
     background-color: white;
     border: 2px solid;
-    width: 99px; }
-  #seccion_5 .container-fluid h2.text-center {
+    width: 99px;
+    text-decoration: none; }
+  #seccion_5 .container-fluid .row a#ingresar.bt {
+    color: gray;
+    font-size: 11px;
+    margin-left: 318px; }
+  #seccion_5 .container-fluid .row h6 {
+    font-size: 10px; }
+  #seccion_5 .container-fluid .row h2.text-center {
     margin-top: -57px;
     margin-bottom: 22px; }
-  #seccion_5 .container-fluid h4 {
+  #seccion_5 .container-fluid .row h4 {
     text-decoration: underline;
-    color: #2B8BBA; }
+    color: #2B8BBA;
+    font-size: 20px; }
+  #seccion_5 .container-fluid .row h5 {
+    font-size: 20px;
+    color: #898b8e; }
+
+#seccion_6 .container-fluid {
+  background-color: #E0DDDD;
+  height: 440px;
+  background-size: cover; }
+#seccion_6 h6 {
+  font-size: 27px; }
+#seccion_6 h5 {
+  color: #898b8e; }
+#seccion_6 button.btn.btn-default {
+  margin-left: 333px;
+  margin-top: 31px;
+  border-radius: 29px;
+  width: 87px;
+  color: white;
+  background-color: #888787;
+  font-size: 13px;
+  border: 1px solid white; }
+
+#footer .row {
+  background-color: white;
+  height: 5px; }
+#footer .row-1 {
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 36px; }
+#footer img {
+  margin-top: -21px; }
+#footer p.derechos {
+  margin-left: 452px;
+  color: white;
+  font-size: 14px;
+  margin-top: 7px; }
 
 #seccion_3 {
   background: #EFF9FB; }
